@@ -7,6 +7,10 @@ dpkg (1.14.17) UNRELEASED; urgency=low
     whatever's currently installed. Closes: #151540
     Thanks to Colin Watson.
 
+  [ Raphael Hertzog ]
+  * Add a warning displayed by dpkg-genchanges if the current version is
+    smaller than the previous one. Closes: #4655
+
   [ Updated manpages translations ]
   * German (Helge Kreutzmann).
 
