@@ -1,3 +1,8 @@
+2008-01-24  Raphael Hertzog  <hertzog@debian.org>
+
+	* scripts/dpkg-genchanges.pl: Warn if the current version is
+	smaller than the previous one.
+
 2008-01-22  Guillem Jover  <guillem@debian.org>
 
 	* dpkg-deb/extract.c (extracthalf): Refactor fflush and its buggy
